--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.6",
     "set-default-browser": "^1.1.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
